rapidcheck    = dependency('rapidcheck')
gtest         = dependency('gtest')
dependencies  = [gtest, rapidcheck, ventilation_dep]

compliance  = executable( 'test-compliance',  'test-compliance.cpp', dependencies: dependencies)
elastance   = executable(  'test-elastance',   'test-elastance.cpp', dependencies: dependencies)
flow        = executable(       'test-flow',        'test-flow.cpp', dependencies: dependencies)
packet      = executable(     'test-packet',      'test-packet.cpp', dependencies: dependencies)
peep        = executable(       'test-peep',        'test-peep.cpp', dependencies: dependencies)
pressure    = executable(   'test-pressure',    'test-pressure.cpp', dependencies: dependencies)
pdelta      = executable(     'test-pdelta',      'test-pdelta.cpp', dependencies: dependencies)
ppeak       = executable(      'test-ppeak',       'test-ppeak.cpp', dependencies: dependencies)
resistance  = executable( 'test-resistance',  'test-resistance.cpp', dependencies: dependencies)
traits      = executable(     'test-traits',      'test-traits.cpp', dependencies: dependencies)
volume      = executable(     'test-volume',      'test-volume.cpp', dependencies: dependencies)

test( 'test-compliance',  compliance)
test(  'test-elastance',   elastance)
test(       'test-flow',        flow)
test(     'test-packet',      packet)
test(       'test-peep',        peep)
test(   'test-pressure',    pressure)
test(     'test-pdelta',      pdelta)
test(      'test-ppeak',       ppeak)
test( 'test-resistance',  resistance)
test(     'test-traits',      traits)
test(     'test-volume',      volume)
